# cratedb-tableau-connector

./: .gitignore  DEVELOP.md  pyproject.toml
.github/workflows/: main.yml
cratedb_jdbc/: connectionBuilder.js  manifest.xml
